add large file todo

--- a/README.org
+++ b/README.org
@@ -13,3 +13,5 @@ Use ~CPACK_PACKAGE_FILE_NAME~ for this. Shouldn't the package be portable?
 ** TODO Fix Doxygen
 
 Is it generating documentation?
+
+** TODO Include large files
